Fixed overlapping content in CSS

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body{
     position: fixed;
     background-color: #079992;
     width: 100%;
+    z-index: 1; /*this makes it so things don't overlap */
 }
 
 
@@ -95,7 +96,7 @@ a{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 4rem 0 3rem 0;
+    padding: 3rem 0 3rem 0;
 }
 .project-list {
     display: flex;
@@ -104,6 +105,7 @@ a{
 
 .project-tile {
     transition: transform 0.2s ease-out;
+    padding: 1.5rem;
 }
 
 .project-tile:hover {
@@ -113,7 +115,7 @@ a{
 
 
 .project-list img {
-    max-width: 30rem;
+    max-width: 25rem;
 }
 
 figcaption {
